<resources>
    <string name="app_name">PlantsHandBook</string>
    <string-array name="plant_a">
        <item>Ромашка</item>
        <item>Малина</item>
        <item>Клубника</item>
        <item>Ежевика</item>
        <item>Рогоз</item>
    </string-array>
    <string-array name="spinner_stat">
        <item>Free mode</item>
        <item>10 pictures mode</item>
        <item>All</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="save_alert">Save Image</string>
    <string name="save_image_name">Write the name of the image</string>
    <string name="save_img">Save</string>
    <string name="cancel_save_img">Cancel</string>
    <string name="hint_img_name">Image name</string>
    <string name="permission_delete">Permission Delete</string>
    <string name="permision_delete_text">Turn on the switch to be able to delete the image</string>
    <string name="exit">Exit</string>
    <string name="layout_margin_text_var_game">24dp</string>
    <string name="layout_margin_start_text_var_game">24dp</string>
    <string name="close_game_dialog_title">Close game</string>
    <string name="close_game_dialog_body">Do you want to finish the game?</string>
    <string name="close_game_dialog_close">Finish</string>
    <string name="close_game_dialog_cancel">Cancel</string>
    <string name="game_pass_dialog_body">There are not enough images in the database to start the game. Add images first.</string>
    <string name="game_pass_dialog_title">Switch to edit mode</string>
    <string name="game_pass_dialog_conversion">Switch</string>
    <string name="game_pass_dialog_cancel">Cancel</string>
    <string name="delete_image_dialog_body">Confirm your intention to delete the image</string>
    <string name="delete_image_dialog_title">Deleting an image</string>
    <string name="delete_image_dialog_conversion">Delete</string>
    <string name="delete_image_dialog_cancel">Cancel</string>
    <string name="redact_name_dialog_body">Renaming an image</string>
    <string name="redact_name_dialog_hint">Enter a new name</string>
    <string name="redact_name_dialog_rename">Rename</string>
    <string name="redact_name_dialog_cancel">Cancel</string>
    <string name="close_app_dialog_title">Close app</string>
    <string name="close_app_dialog_body">Do you want to close the application?</string>
    <string name="close_app_dialog_close">Close</string>
    <string name="close_app_dialog_cancel">Cancel</string>
    <string name="game_mode_dialog_title">Game mode selection</string>
    <string name="game_mode_dialog_body">Select game mode</string>
    <string name="game_mode_dialog_conversion">Free</string>
    <string name="game_mode_dialog_cancel">10 pictures</string>
    <string name="progress_bar_text">%1$d/10</string>
    <string name="end_game_header_text_select">Selected name</string>
    <string name="end_game_header_text_right">Correct name</string>
    <string name="stat_header_text">Select the type of statistics</string>
    <string name="stat_header_text_name">Name image</string>
    <string name="stat_header_text_progress_free">Proportion of correct Game mode Free</string>
    <string name="stat_header_text_progress_10g">Proportion of correct Game mode 10G</string>
    <string name="stat_progress_bar_text">%1$d %</string>
    <string name="stat_game_count_header">Number of games:</string>



</resources>